# Music-GenAI-App

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
data/outputs/: README.md
docs/: index.md
docs/reference/: music_gen.md  utils.md
music_generation/: __init__.py  _utils.py  music_gen.py
reference/music_gen/: index.html
reference/utils/: index.html
scripts/: demo1.py  demo2.py  demo3.py  extract_from_youtube.py
webapp/: app.py
